// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toucan DSN with transportOptions 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan DSN with transportOptions 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan allowlists 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "cookies": Object {
      "fo": "bar",
      "foo": "bar",
    },
    "data": Object {
      "bar": "baz",
      "foo": "bar",
    },
    "headers": Object {
      "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0",
      "x-foo": "Foo",
    },
    "method": "POST",
    "query_string": "foo=bar&bar=baz",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan attachStacktrace false 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan attachStacktrace false 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan beforeSend 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "headers": Object {
      "X-Foo": "Bar",
    },
    "method": "POST",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: Error 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: Error 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan captureException: Object 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "Non-Error exception captured with keys: bar, foo",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: Object 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan captureException: primitive 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: primitive 2`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "true",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: primitive 3`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "~/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "10",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureException: primitive 4`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan captureMessage 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan captureMessage 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan rewriteFrames iteratee 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "abs_path": "/usr/bin//dist/file",
              "colno": 0,
              "filename": "/dist/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "abs_path": "/usr/bin//dist/file",
              "colno": 0,
              "filename": "/dist/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan rewriteFrames iteratee 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan rewriteFrames root 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "colno": 0,
              "filename": "/dist/file",
              "function": "bar",
              "lineno": 0,
            },
            Object {
              "colno": 0,
              "filename": "/dist/file",
              "function": "foo",
              "lineno": 0,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan rewriteFrames root 2`] = `"651b177fe1cb4ac89e15c1ecd2cb1d0a"`;

exports[`Toucan setExtra 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "extra": Object {
    "foo": "bar",
  },
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setExtras 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "extra": Object {
    "bar": "baz",
    "foo": "bar",
  },
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setRequestBody 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "data": Object {
      "bar": "baz",
      "foo": "bar",
    },
    "method": "POST",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setTag 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "tags": Object {
    "foo": "bar",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setTags 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "tags": Object {
    "bar": "baz",
    "foo": "bar",
  },
  "timestamp": 1586752837.868,
}
`;

exports[`Toucan setUser 1`] = `
Object {
  "breadcrumbs": Array [],
  "event_id": "651b177fe1cb4ac89e15c1ecd2cb1d0a",
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": Object {
    "method": "GET",
    "url": "https://example.com/",
  },
  "sdk": Object {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": 1586752837.868,
  "user": Object {
    "email": "test@gmail.com",
    "id": "testid",
  },
}
`;
